# syncmark

./: .gitignore  AGENT_HANDOFF.md  README.md  create_proposal_docx.py  pyproject.toml  template.pbs
bimark/: .gitignore  README.md  WatermarkBimark.py  __init__.py  _helper_gen_params.py  detect_generation_text_dump.py  detect_watermark_dump.py  dipper.py  experiment_manifest_attack.json  generate_text_dump.py  perplexity.py  pyproject.toml  run_real_syncmark_drift_grid.py  run_real_syncmark_drift_smoke.py  run_syncmark_bimark_smoke.py  sanity_check_manifest.json  summarize_replication.py  syncmark_support.py  utils.py
bimark/katana/: BiMark_Full_Experiment.pbs  BiMark_Replication.pbs  BiMark_Sanity_Check.pbs  SyncMark_BiMark_Real_Smoke.pbs  analyze_full_experiment.py  delete_models.sh  download_models.sh
code/: README.md  requirements.txt
code/configs/: hf_llama3_8b_example.yaml  synthetic.yaml
code/scripts/: make_preview_plots.py  run_decode_from_text.py  run_hf_generation.py  run_synthetic_benchmark.py  run_text_attack_demo.py
docs/: execution_protocol.md  expected_results_and_conclusions.md  experimental_plan.md  literature_map_2025_2026.md  paper_links.csv  paper_outline.md  repository_structure.md  theory_spec_syncmark.md
proposal/: COMP9993_Research_Proposal.docx
results/: synthetic_metrics.csv  synthetic_summary.md  synthetic_summary_table.csv
results/logs/: README.md  (+10 more)
syncmark/: __init__.py  alignment.py  attacks.py  baselines.py  channel.py  ecc.py  framing.py  hashing.py  hf_adapter.py  metrics.py  simulation.py  utils.py
(+34 files in other folders)
